# WordCounter

./: .gitignore  README.MD  pyproject.toml
multiplication_table/: main.py
top_k/: .env  main.py  setting.py
top_k/rewriters/: rewriters.py
top_k/src/: .env  main.py  setting.py
top_k/src/utils/: WordCounter.py  data_persisters.py  data_writers.py  helpers.py  rewriters.py  sqlite_persister.py
top_k/tests/utils/: test_helpers.py
top_k/utils/: WordCounter.py  rewriters.py
