[tool.poetry]
name = "sparksab"
version = "0.1.0"
description = "top_k words"
authors = ["mickeyP <corp.mp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.1"
python-dotenv = "^0.15.0"
dotdict = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
